[gd_scene load_steps=3 format=3 uid="uid://c5qrulae3rrpm"]

[ext_resource type="Script" uid="uid://bga6ghvjpsyq5" path="res://scene + script/title.gd" id="1_s2oh1"]
[ext_resource type="FontFile" uid="uid://drdmmbjoy8ik" path="res://fonts/FiveFontsatFreddy's-Regular.ttf" id="2_33qfa"]

[node name="title" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s2oh1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1172.0
offset_bottom = 665.0
color = Color(0.39688927, 0.39688927, 0.39688924, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_33qfa")
theme_override_font_sizes/font_size = 64
text = "CAPITALIST SHIRT SIM"

[node name="HSeparator" type="HSeparator" parent="CenterContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="play" type="Button" parent="CenterContainer/VBoxContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 32
text = "PLAY"

[node name="settings" type="Button" parent="CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 32
text = "SETTINGS"

[node name="credits" type="Button" parent="CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 32
text = "CREDITS"

[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/credits" to="." method="_on_credits_pressed"]
